--- a/package.json
+++ b/package.json
@@ -12,34 +12,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0",
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler": "~7.0.0",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/common": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "core-js": "^2.5.4",
+    "@angular/animations": "^7.0.4",
+    "@angular/common": "^7.0.4",
+    "@angular/compiler": "^7.0.4",
+    "@angular/core": "^7.0.4",
+    "@angular/forms": "^7.0.4",
+    "@angular/http": "^7.0.4",
+    "@angular/platform-browser": "^7.0.4",
+    "@angular/platform-browser-dynamic": "^7.0.4",
+    "@angular/router": "^7.0.4",
+    "core-js": "^2.6.0",
     "express": "^4.16.4",
     "path": "^0.12.7",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-observable": "0.0.7",
     "typescript": "~3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "~7.0.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "^0.10.7",
+    "@angular/cli": "^7.1.2",
+    "@angular/compiler-cli": "^7.1.2",
+    "@angular/language-service": "^7.0.4",
+    "@types/jasmine": "^2.8.12",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
-    "enhanced-resolve": "^3.3.0",
+    "enhanced-resolve": "^3.4.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
