--- a/package.json
+++ b/package.json
@@ -12,42 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.4",
-    "@angular/common": "^7.0.4",
-    "@angular/compiler": "^7.0.4",
-    "@angular/core": "^7.0.4",
-    "@angular/forms": "^7.0.4",
-    "@angular/http": "^7.0.4",
-    "@angular/platform-browser": "^7.0.4",
-    "@angular/platform-browser-dynamic": "^7.0.4",
-    "@angular/router": "^7.0.4",
-    "core-js": "^2.6.0",
-    "express": "^4.16.4",
+    "@angular/animations": "^7.2.0-rc.0",
+    "@angular/common": "^7.2.0-rc.0",
+    "@angular/compiler": "^7.2.0-rc.0",
+    "@angular/core": "^7.2.0-rc.0",
+    "@angular/forms": "^7.2.0-rc.0",
+    "@angular/http": "^7.2.0-rc.0",
+    "@angular/platform-browser": "^7.2.0-rc.0",
+    "@angular/platform-browser-dynamic": "^7.2.0-rc.0",
+    "@angular/router": "^7.2.0-rc.0",
+    "core-js": "^2.6.1",
+    "express": "^5.0.0-alpha.7",
     "path": "^0.12.7",
-    "typescript": "~3.1.1",
+    "typescript": "~3.3.0-dev.20190105",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.1.2",
-    "@angular/compiler-cli": "^7.1.2",
-    "@angular/language-service": "^7.0.4",
-    "@types/jasmine": "^2.8.12",
+    "@angular-devkit/build-angular": "^0.12.0-rc.0",
+    "@angular/cli": "^7.2.0-rc.0",
+    "@angular/compiler-cli": "^7.2.0-rc.0",
+    "@angular/language-service": "^7.2.0-rc.0",
+    "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~8.9.4",
+    "@types/node": "~10.12.18",
     "codelyzer": "~4.5.0",
-    "enhanced-resolve": "^3.4.1",
-    "jasmine-core": "~2.99.1",
+    "enhanced-resolve": "^4.1.0",
+    "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "tslint": "~5.11.0"
   },
   "engines": {
     "node": "10.13.0",
