--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^5.0.0-alpha.7",
     "path": "^0.12.7",
     "typescript": "~3.3.0-dev.20190105",
+    "webpack-dev-server": "^3.1.14",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
